--- a/httpmaster-spring-boot-starter/pom.xml
+++ b/httpmaster-spring-boot-starter/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-logging</artifactId>
+            <scope>compile</scope>
+        </dependency>
 
         <!--httpmaster-core-->
         <dependency>
