--- a/httpmaster-spring-boot-starter/pom.xml
+++ b/httpmaster-spring-boot-starter/pom.xml
@@ -12,6 +12,26 @@
     <artifactId>httpmaster-spring-boot-starter</artifactId>
 
     <dependencies>
+
+        <!-- HttpClient start-->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <!-- OKhttp start-->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <!-- OKhttp end  -->
+        <!-- HttpClient end  -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
